# CMakeSeries

Ep002/source/: CMakeLists.txt  main.cpp
Ep005/source/: CMakeLists.txt  main.cpp
Ep007/source/: CMakeLists-v1.txt  CMakeLists-v2.txt  CMakeLists.txt  main.cpp
Ep007/source/logger/include/: log.h
Ep007/source/logger/src/: log.cpp
Ep008/: CMakeLists.txt
Ep008/src/: main.cpp
Ep008/src/math/: supermath.cpp
Ep008/src/stats/: stats.cpp
Ep009/: CMakeLists.txt
Ep009/src/math/: math.cmake
Ep009/src/stats/: stats.cmake
Ep010/: CMakeLists.txt
Ep010/src/: main.cpp
Ep010/src/math/: CMakeLists.txt
Ep010/src/stats/: CMakeLists.txt
